Update and rename index.md to index.html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 
 11/05/2021
-### cookies
+### Marcu Roxana
 
 <script> document.cookie = "session=test GDPR";
   document.cookie = "favorite_task=collect Data";
