--- a/index.html
+++ b/index.html
@@ -1,11 +1,8 @@
 
 
-### MDCP-IT lab
-
-
-
+MDCP-IT lab
 11/05/2021
-### Marcu Roxana
+ Marcu Roxana
 
 <script> document.cookie = "session=test GDPR";
   document.cookie = "favorite_task=collect Data";
