--- a/index.html
+++ b/index.html
@@ -1,8 +1,17 @@
 
+<html>
+<head>
+  <title>MDCP-IT lab</title>
+</head>
 
-MDCP-IT lab
-11/05/2021
- Marcu Roxana
+<body>
+  <h1>11/05/2021</h1>
+  <p> Marcu Roxana
+</p>
+</body>
+
+</html>
+
 
 <script> document.cookie = "session=test GDPR";
   document.cookie = "favorite_task=collect Data";
