--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
 document.cookie = "favorite_food=tripe";
 function alertCookie() {
   alert(document.cookie);
-}
+} </script>
 <button onclick="alertCookie()">Show cookies</button>
 
 
-document.cookie = "test1=Hello";
+<script> document.cookie = "test1=Hello";
 document.cookie = "test2=World";
 
 const cookieValue = document.cookie
@@ -36,22 +36,22 @@ const cookieValue = document.cookie
 
 function alertCookieValue() {
   alert(cookieValue);
-}
+}</script>
 <button onclick="alertCookieValue()">Show cookie value</button>
 
-
+<script>
 function doOnce() {
   if (!document.cookie.split('; ').find(row => row.startsWith('doSomethingOnlyOnce'))) {
     alert("Do something here!");
     document.cookie = "doSomethingOnlyOnce=true; expires=Fri, 31 Dec 9999 23:59:59 GMT";
   }
-}
+} </script>
 <button onclick="doOnce()">Only do something once</button>
 
-
+<script>
 function resetOnce() {
   document.cookie = "doSomethingOnlyOnce=; expires=Thu, 01 Jan 1970 00:00:00 GMT";
-}
+}</script>
 <button onclick="resetOnce()">Reset only once cookie</button>
 
 
