--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ document.cookie = "favorite_food=tripe";
 function alertCookie() {
   alert(document.cookie);
 } </script>
-<button onclick="alertCookie()">Show cookies</button>
+<body> <button onclick="alertCookie()">Show cookies</button> </body>
 
 
 <script> document.cookie = "test1=Hello";
@@ -37,7 +37,7 @@ const cookieValue = document.cookie
 function alertCookieValue() {
   alert(cookieValue);
 }</script>
-<button onclick="alertCookieValue()">Show cookie value</button>
+<body> <button onclick="alertCookieValue()">Show cookie value</button> </body>
 
 <script>
 function doOnce() {
@@ -46,13 +46,13 @@ function doOnce() {
     document.cookie = "doSomethingOnlyOnce=true; expires=Fri, 31 Dec 9999 23:59:59 GMT";
   }
 } </script>
-<button onclick="doOnce()">Only do something once</button>
+<body> <button onclick="doOnce()">Only do something once</button> </body>
 
 <script>
 function resetOnce() {
   document.cookie = "doSomethingOnlyOnce=; expires=Thu, 01 Jan 1970 00:00:00 GMT";
 }</script>
-<button onclick="resetOnce()">Reset only once cookie</button>
+<body> <button onclick="resetOnce()">Reset only once cookie</button> </body>
 
 
 if (document.cookie.split(';').some(function(item) {
@@ -77,5 +77,4 @@ if (document.cookie.split(';').some(function(item) {
 if (document.cookie.split(';').some((item) => item.includes('reader=1'))) {
     console.log('The cookie "reader" has "1" for value')
 }
-</script>
 
