--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ function resetOnce() {
 }</script>
 <body> <button onclick="resetOnce()">Reset only once cookie</button> </body>
 
-
+<script>
 if (document.cookie.split(';').some(function(item) {
     return item.trim().indexOf('reader=') == 0
 })) {
@@ -76,5 +76,5 @@ if (document.cookie.split(';').some(function(item) {
 
 if (document.cookie.split(';').some((item) => item.includes('reader=1'))) {
     console.log('The cookie "reader" has "1" for value')
-}
+}</script>
 
